Done home and about

--- a/src/app/components/home-slider/home-slider.component.html
+++ b/src/app/components/home-slider/home-slider.component.html
@@ -1,4 +1,4 @@
-<section class="d-flex justify-content-around gap-3 w-100 my-2 container overflow-x-scroll">
+<section class="d-flex justify-content-around gap-3 w-100 my-2 container overflow-hidden overflow-x-scroll">
     <article class="card col-3 rounded rounded-5"
       style="height: 500px; background-repeat: no-repeat; background-position: center center; background-size: cover;
         background-image: url('https://jubari.net/media/892/ishan-seefromthesky-66Tu10CxYY0-unsplash.jpg');">
