--- a/src/app/components/nav/nav.component.html
+++ b/src/app/components/nav/nav.component.html
@@ -34,8 +34,9 @@
                 <hr>
                 <!-- bottom nav  -->
                 <div class="d-flex w-100 justify-content-around">
-                    <a class="nav-item nav-link" href="#">الرئيسية</a>
-                    <a class="nav-item nav-link" href="#">من نحن</a>
+                    <a class="nav-item nav-link" routerLink="/">الرئيسية</a>
+                    <a class="nav-item nav-link" routerLink="/about">من نحن</a>
+                    <a class="nav-item nav-link" routerLink="/about">خدماتنا</a>
                     <a class="nav-item nav-link" href="#">الوجهات السياحية</a>
                     <a class="nav-item nav-link" href="#">العرض و الباقات</a>
                     <a class="nav-item nav-link" href="#">الفنادق</a>
