--- a/src/app/pages/about/about.component.html
+++ b/src/app/pages/about/about.component.html
@@ -1,6 +1,6 @@
-<section class=" d-flex justify-content-start align-items-end mb-5"
-style="height:60vh; background-repeat: no-repeat; background-size: cover; background-position: center center; background-image: url('https://jubari.net/build/assets/sky-bg.6716ff2f.jpg');">
-    <h1 class="text-body-emphasis p-5">من نحن</h1>
+<section 
+>
+    
 </section>
 
 <main class="container">
