--- a/src/app/pages/about/about.component.html
+++ b/src/app/pages/about/about.component.html
@@ -1,15 +1,10 @@
-<section 
->
-    
-</section>
-
 <main class="container">
     <section class="row">
         <div class="col-xl-6 p-5">
                 <img style="background-color:#3fbaf1;" src="https://jubari.net/media/602/logo-color.svg" width="400" height="200" class="d-inline-block align-top p-4 rounded rounded-4" alt="">
         </div>
         <div class="gap-5 col-xl-6">
-            <h2 class=" fs-1">
+            <h2 class=" fs-1 my-3 text-secondary">
                 عن جباري
             </h2>
             <p class="fw-bold fs-5">
