--- a/src/app/pages/services/services.component.html
+++ b/src/app/pages/services/services.component.html
@@ -1,1 +1,19 @@
-<p>services works!</p>
+<section class="container">
+    <p class="my-4 text-center fs-5">
+        وكالة سياحة متخصصة تسعى لراحة العملاء وتوفير خدمات متنوعة في مجال السفر
+        والسياحة.
+      </p>
+      
+      <div>
+        <div class="row g-4 my-4">
+          <app-item class="col-lg-3 col-md-6"></app-item>
+          <app-item class="col-lg-3 col-md-6"></app-item>
+          <app-item class="col-lg-3 col-md-6"></app-item>
+          <app-item class="col-lg-3 col-md-6"></app-item>
+          <app-item class="col-lg-3 col-md-6"></app-item>
+          <app-item class="col-lg-3 col-md-6"></app-item>
+          <app-item class="col-lg-3 col-md-6"></app-item>
+          <app-item class="col-lg-3 col-md-6"></app-item>
+        </div>
+      </div>
+</section>
