--- a/src/app/components/home-slider/home-slider.component.html
+++ b/src/app/components/home-slider/home-slider.component.html
@@ -1,66 +1,74 @@
 <section class="d-flex justify-content-around gap-3 w-100 my-2 container overflow-hidden overflow-x-scroll">
-    <article class="card col-3 rounded rounded-5"
-      style="height: 500px; background-repeat: no-repeat; background-position: center center; background-size: cover;
-        background-image: url('https://jubari.net/media/892/ishan-seefromthesky-66Tu10CxYY0-unsplash.jpg');">
-      <div class="card-body d-flex flex-column justify-content-center align-items-center text-white text-center">
-        <h3 class="card-title">الحج و العمرة</h3>
-        <a href="#" class="card-link text-white drop-filter rounded-circle"><i class="fa-solid fa-arrow-left"></i></a>
+  <div class="col-3 col-lg-4 col-md-6 p-2">
+    <a href="#" class="card text-decoration-none position-relative rounded rounded-4" style="height: 250px; background-image: url('https://jubari.net/media/892/ishan-seefromthesky-66Tu10CxYY0-unsplash.jpg'); background-repeat: no-repeat; background-position: center center; background-size: cover;">
+      <div class="overlay rounded rounded-4"></div> 
+      <div class="card-body text-center d-flex align-items-center justify-content-center text-white position-relative">
+        <h4 class="card-title" style="z-index: 2;">الحج و العمرة</h4>
       </div>
-    </article>
-    <article class="card col-3 rounded rounded-5"
-      style="height: 500px; background-repeat: no-repeat; background-position: center center; background-size: cover;
-        background-image: url('https://jubari.net/media/884/convertkit-htQznS-Rx7w-unsplash.jpg');">
-      <div class="card-body d-flex flex-column justify-content-center align-items-center text-white text-center">
-        <h3 class="card-title">إستخراج التأشيرة</h3>
-        <a href="#" class="card-link text-white drop-filter rounded-circle"><i class="fa-solid fa-arrow-left"></i></a>
+    </a>
+  </div>
+  
+  <div class="col-3 col-lg-4 col-md-6 p-2">
+    <a href="#" class="card text-decoration-none position-relative rounded rounded-4" style="height: 250px; background-image: url('https://jubari.net/media/884/convertkit-htQznS-Rx7w-unsplash.jpg'); background-repeat: no-repeat; background-position: center center; background-size: cover;">
+      <div class="overlay rounded rounded-4"></div> 
+      <div class="card-body text-center d-flex align-items-center justify-content-center text-white position-relative">
+        <h4 class="card-title" style="z-index: 2;">إستخراج التأشيرة</h4>
       </div>
-    </article>
-    <article class="card col-3 rounded rounded-5"
-      style="height: 500px; background-repeat: no-repeat; background-position: center center; background-size: cover;
-        background-image: url('https://jubari.net/media/860/image-10.jpg');">
-      <div class="card-body d-flex flex-column justify-content-center align-items-center text-white text-center">
-        <h3 class="card-title">حجز تذاكر طيران</h3>
-        <a href="#" class="card-link text-white drop-filter rounded-circle"><i class="fa-solid fa-arrow-left"></i></a>
+    </a>
+  </div>
+  
+  <div class="col-3 col-lg-4 col-md-6 p-2">
+    <a href="#" class="card text-decoration-none position-relative rounded rounded-4" style="height: 250px; background-image: url('https://jubari.net/media/860/image-10.jpg'); background-repeat: no-repeat; background-position: center center; background-size: cover;">
+      <div class="overlay rounded rounded-4"></div> 
+      <div class="card-body text-center d-flex align-items-center justify-content-center text-white position-relative">
+        <h4 class="card-title" style="z-index: 2;">حجز تذاكر طيران</h4>
       </div>
-    </article>
-    <article class="card col-3 rounded rounded-5"
-      style="height: 500px; background-repeat: no-repeat; background-position: center center; background-size: cover;
-        background-image: url('https://jubari.net/media/872/tim-depickere-5mp2mlab7ZM-unsplash.jpg');">
-      <div class="card-body d-flex flex-column justify-content-center align-items-center text-white text-center">
-        <h3 class="card-title">تأجير سيارات</h3>
-        <a href="#" class="card-link text-white drop-filter rounded-circle"><i class="fa-solid fa-arrow-left"></i></a>
+    </a>
+  </div>
+  
+  <div class="col-3 col-lg-4 col-md-6 p-2">
+    <a href="#" class="card text-decoration-none position-relative rounded rounded-4" style="height: 250px; background-image: url('https://jubari.net/media/872/tim-depickere-5mp2mlab7ZM-unsplash.jpg'); background-repeat: no-repeat; background-position: center center; background-size: cover;">
+      <div class="overlay rounded rounded-4"></div> 
+      <div class="card-body text-center d-flex align-items-center justify-content-center text-white position-relative">
+        <h4 class="card-title" style="z-index: 2;">تأجير سيارات</h4>
       </div>
-    </article>
-    <article class="card col-3 rounded rounded-5"
-      style="height: 500px; background-repeat: no-repeat; background-position: center center; background-size: cover;
-        background-image: url('https://jubari.net/media/892/ishan-seefromthesky-66Tu10CxYY0-unsplash.jpg');">
-      <div class="card-body d-flex flex-column justify-content-center align-items-center text-white text-center">
-        <h3 class="card-title">الحج و العمرة</h3>
-        <a href="#" class="card-link text-white drop-filter rounded-circle"><i class="fa-solid fa-arrow-left"></i></a>
+    </a>
+  </div>
+  
+  <div class="col-3 col-lg-4 col-md-6 p-2">
+    <a href="#" class="card text-decoration-none position-relative rounded rounded-4" style="height: 250px; background-image: url('https://jubari.net/media/892/ishan-seefromthesky-66Tu10CxYY0-unsplash.jpg'); background-repeat: no-repeat; background-position: center center; background-size: cover;">
+      <div class="overlay rounded rounded-4"></div> 
+      <div class="card-body text-center d-flex align-items-center justify-content-center text-white position-relative">
+        <h4 class="card-title" style="z-index: 2;">الحج و العمرة</h4>
       </div>
-    </article>
-    <article class="card col-3 rounded rounded-5"
-      style="height: 500px; background-repeat: no-repeat; background-position: center center; background-size: cover;
-        background-image: url('https://jubari.net/media/884/convertkit-htQznS-Rx7w-unsplash.jpg');">
-      <div class="card-body d-flex flex-column justify-content-center align-items-center text-white text-center">
-        <h3 class="card-title">إستخراج التأشيرة</h3>
-        <a href="#" class="card-link text-white drop-filter rounded-circle"><i class="fa-solid fa-arrow-left"></i></a>
+    </a>
+  </div>
+  
+  <div class="col-3 col-lg-4 col-md-6 p-2">
+    <a href="#" class="card text-decoration-none position-relative rounded rounded-4" style="height: 250px; background-image: url('https://jubari.net/media/884/convertkit-htQznS-Rx7w-unsplash.jpg'); background-repeat: no-repeat; background-position: center center; background-size: cover;">
+      <div class="overlay rounded rounded-4"></div> 
+      <div class="card-body text-center d-flex align-items-center justify-content-center text-white position-relative">
+        <h4 class="card-title" style="z-index: 2;">إستخراج التأشيرة</h4>
       </div>
-    </article>
-    <article class="card col-3 rounded rounded-5"
-      style="height: 500px; background-repeat: no-repeat; background-position: center center; background-size: cover;
-        background-image: url('https://jubari.net/media/860/image-10.jpg');">
-      <div class="card-body d-flex flex-column justify-content-center align-items-center text-white text-center">
-        <h3 class="card-title">حجز تذاكر طيران</h3>
-        <a href="#" class="card-link text-white drop-filter rounded-circle"><i class="fa-solid fa-arrow-left"></i></a>
+    </a>
+  </div>
+  
+  <div class="col-3 col-lg-4 col-md-6 p-2">
+    <a href="#" class="card text-decoration-none position-relative rounded rounded-4" style="height: 250px; background-image: url('https://jubari.net/media/860/image-10.jpg'); background-repeat: no-repeat; background-position: center center; background-size: cover;">
+      <div class="overlay rounded rounded-4"></div> 
+      <div class="card-body text-center d-flex align-items-center justify-content-center text-white position-relative">
+        <h4 class="card-title" style="z-index: 2;">حجز تذاكر طيران</h4>
       </div>
-    </article>
-    <article class="card col-3 rounded rounded-5"
-      style="height: 500px; background-repeat: no-repeat; background-position: center center; background-size: cover;
-        background-image: url('https://jubari.net/media/872/tim-depickere-5mp2mlab7ZM-unsplash.jpg');">
-      <div class="card-body d-flex flex-column justify-content-center align-items-center text-white text-center">
-        <h3 class="card-title">تأجير سيارات</h3>
-        <a href="#" class="card-link text-white drop-filter rounded-circle"><i class="fa-solid fa-arrow-left"></i></a>
+    </a>
+  </div>
+  
+  <div class="col-3 col-lg-4 col-md-6 p-2">
+    <a href="#" class="card text-decoration-none position-relative rounded rounded-4" style="height: 250px; background-image: url('https://jubari.net/media/872/tim-depickere-5mp2mlab7ZM-unsplash.jpg'); background-repeat: no-repeat; background-position: center center; background-size: cover;">
+      <div class="overlay rounded rounded-4"></div> 
+      <div class="card-body text-center d-flex align-items-center justify-content-center text-white position-relative">
+        <h4 class="card-title" style="z-index: 2;">تأجير سيارات</h4>
       </div>
-    </article>
+    </a>
+  </div>
+  
   </section>
