--- a/src/app/pages/home/home.component.html
+++ b/src/app/pages/home/home.component.html
@@ -24,47 +24,45 @@
       نعرض لك باقات سياحية متعددة الوجهات، تجمع مابين السعر المنافس والجودة العالية
     </p>
 
-    <article class=" w-100 row container">
+    <article class="w-100 row container">
       <div class="col-6 p-2">
-        <div class="card rounded rounded-5"
-      style="height: 250px; background-repeat: no-repeat; background-position: center center; background-size: cover;
-        background-image: url('https://jubari.net/media/223/socotra-testata-pozzi-1.jpg');">
-      <div class="card-body d-flex flex-column justify-content-center align-items-center text-white text-center">
-        <h3 class="card-title">جزيرة سقطرى</h3>
+        <a href="https://jubari.net/ar/services/2" class="card text-decoration-none position-relative rounded rounded-4" style="height: 250px; background-image: url('https://jubari.net/media/223/socotra-testata-pozzi-1.jpg'); background-repeat: no-repeat; background-position: center center; background-size: cover;">
+          <div class="overlay rounded rounded-4"></div> <!-- Overlay for darkening effect -->
+          <div class="card-body text-center d-flex align-items-center justify-content-center text-white position-relative">
+            <h4 class="card-title" style="z-index: 2;">جزيرة سقطرى</h4>
+          </div>
+        </a>
       </div>
-      </div>
-      </div>
-      
+    
       <div class="col-6 p-2">
-        <div class="card rounded rounded-5"
-      style="height: 250px; background-repeat: no-repeat; background-position: center center; background-size: cover;
-        background-image: url('https://jubari.net/media/30/Frame-134032.jpg');">
-      <div class="card-body d-flex flex-column justify-content-center align-items-center text-white text-center">
-        <h3 class="card-title">دبى</h3>
+        <a href="https://jubari.net/ar/services/2" class="card text-decoration-none position-relative rounded rounded-4" style="height: 250px; background-image: url('https://jubari.net/media/30/Frame-134032.jpg'); background-repeat: no-repeat; background-position: center center; background-size: cover;">
+          <div class="overlay rounded rounded-4"></div> <!-- Overlay for darkening effect -->
+          <div class="card-body text-center d-flex align-items-center justify-content-center text-white position-relative">
+            <h4 class="card-title" style="z-index: 2;">دبى</h4>
+          </div>
+        </a>
       </div>
-      </div>
-      </div>
-      
+    
       <div class="col-6 p-2">
-        <div class="card rounded rounded-5"
-      style="height: 250px; background-repeat: no-repeat; background-position: center center; background-size: cover;
-        background-image: url('https://jubari.net/media/31/Frame-134033.jpg');">
-      <div class="card-body d-flex flex-column justify-content-center align-items-center text-white text-center">
-        <h3 class="card-title">ماليزيا</h3>
+        <a href="https://jubari.net/ar/services/2" class="card text-decoration-none position-relative rounded rounded-4" style="height: 250px; background-image: url('https://jubari.net/media/31/Frame-134033.jpg'); background-repeat: no-repeat; background-position: center center; background-size: cover;">
+          <div class="overlay rounded rounded-4"></div> <!-- Overlay for darkening effect -->
+          <div class="card-body text-center d-flex align-items-center justify-content-center text-white position-relative">
+            <h4 class="card-title" style="z-index: 2;">ماليزيا</h4>
+          </div>
+        </a>
       </div>
-      </div>
-      </div>
-      
+    
       <div class="col-6 p-2">
-        <div class="card rounded rounded-5"
-      style="height: 250px; background-repeat: no-repeat; background-position: center center; background-size: cover;
-        background-image: url('https://jubari.net/media/31/Frame-134033.jpg');">
-      <div class="card-body d-flex flex-column justify-content-center align-items-center text-white text-center">
-        <h3 class="card-title">شرم الشيخ</h3>
-      </div>
-      </div>
+        <a href="https://jubari.net/ar/services/2" class="card text-decoration-none position-relative rounded rounded-4" style="height: 250px; background-image: url('https://jubari.net/media/31/Frame-134033.jpg'); background-repeat: no-repeat; background-position: center center; background-size: cover;">
+          <div class="overlay rounded rounded-4"></div> <!-- Overlay for darkening effect -->
+          <div class="card-body text-center d-flex align-items-center justify-content-center text-white position-relative">
+            <h4 class="card-title" style="z-index: 2;">شرم الشيخ</h4>
+          </div>
+        </a>
       </div>
     </article>
+    
+    
     <button class="btn btn-outline-primary my-3">إكتشف المزيد</button>
   </section>
 </main>
