--- a/src/styles.css
+++ b/src/styles.css
@@ -12,3 +12,14 @@
     -ms-border-radius: 15px;
     -o-border-radius: 15px;
 }
+
+
+.overlay {
+    position: absolute;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    background-color: rgba(0, 0, 0, 0.5); /* Dark overlay */
+    z-index: 1; /* Ensure overlay is above the image but below the text */
+}
