--- a/src/app/components/nav/nav.component.html
+++ b/src/app/components/nav/nav.component.html
@@ -27,7 +27,7 @@
       <span class="navbar-toggler-icon"></span>
     </button>
 
-    <div class="w-100 px-3" id="navbarNavAltMarkup">
+    <div class="w-100 px-3 fw-bold" id="navbarNavAltMarkup">
       <!-- top-nav  -->
       <div class="d-flex w-100 justify-content-between align-middle align-items-center">
         <div class="d-flex justify-content-around w-25 fs-5">
