--- a/src/app/components/item/item.component.html
+++ b/src/app/components/item/item.component.html
@@ -1,9 +1,9 @@
-<div>
-    <a href="https://jubari.net/ar/services/2" class="card text-decoration-none position-relative rounded rounded-4">
-        <img src="https://jubari.net/media/886/oswald-elsaboath-7EDZ1fxhgJQ-unsplash-(1).jpg" class="card-img-top rounded rounded-4">
-        <div class="overlay rounded rounded-4"></div> <!-- Overlay for darkening effect -->
+<article>
+    <a [href]="link" class="card text-decoration-none position-relative rounded rounded-4">
+        <img [src]="imageUrl" class="card-img-top rounded rounded-4">
+        <div class="overlay rounded rounded-4"></div> 
         <div class="card-body text-center position-absolute top-50 start-50 translate-middle text-white">
-            <h4 class="card-title">حجز الفنادق</h4>
+          <h4 class="card-title">{{ title }}</h4>
         </div>
-    </a>
-</div>
+      </a>
+</article>
