--- a/src/app/pages/error/error.component.html
+++ b/src/app/pages/error/error.component.html
@@ -1,5 +1,5 @@
 <main class="text-center text-dark-emphasis py-5">
-    <i class="fa-solid fa-umbrella-beach"></i>
+    <i class="fa-solid fa-triangle-exclamation"></i>
     <h1 class="fw-light my-4">هذه الصفحة غير متوفرة</h1>
     <a class="btn btn-outline-warning btn-lg" routerLink="">الرجوع للصفحة الرئيسية</a>
 </main>
