--- a/src/app/components/item/item.component.css
+++ b/src/app/components/item/item.component.css
@@ -1,18 +1,31 @@
 .card {
     position: relative;
+    overflow: hidden;
+}
+.card:hover .card-img-top{
+    transform: scale(1.2);
+    -webkit-transform: scale(1.2);
+    -moz-transform: scale(1.2);
+    -ms-transform: scale(1.2);
+    -o-transform: scale(1.2);
 }
 
 .card-img-top {
     width: 100%;
     height: auto;
+    transition: transform 0.5s ease;
+    -webkit-transition: transform 0.5s ease;
+    -moz-transition: transform 0.5s ease;
+    -ms-transition: transform 0.5s ease;
+    -o-transition: transform 0.5s ease;
 }
 
 .card-body {
-    z-index: 2; /* Ensure the text is above the overlay */
-    display: flex; /* Use flexbox to align content horizontally */
-    flex-direction: row; /* Align children horizontally */
-    justify-content: center; /* Center text horizontally */
-    align-items: center; /* Center text vertically */
+    z-index: 2; 
+    display: flex; 
+    flex-direction: row; 
+    justify-content: center; 
+    align-items: center; 
 }
 
 .card-title {
