--- a/src/styles.css
+++ b/src/styles.css
@@ -1,16 +1,33 @@
 @import 'bootstrap/dist/css/bootstrap.min.css';
 @import '@fortawesome/fontawesome-free/css/all.min.css';
 
+::-webkit-scrollbar {
+    width: 10px;
+  }
+  
+::-webkit-scrollbar-track {
+    box-shadow: inset 0 0 5px rgba(0, 0, 0, 0.495);
+    border-radius: 15px;
+    -webkit-border-radius: 15px;
+    -moz-border-radius: 15px;
+    -ms-border-radius: 15px;
+    -o-border-radius: 10px;
+}
+::-webkit-scrollbar-thumb {
+    background: #0fd9e89f;
+    border-radius: 15px;
+  }
+  
+::-webkit-scrollbar-thumb:hover {
+    background: #34d4e0;
+  }
+
 .drop-filter{
     backdrop-filter: blur(3px);
     padding: 10px;
     font-weight: 100;
     font-size: 20px;
     border-radius: 15px;
-    -webkit-border-radius: 15px;
-    -moz-border-radius: 15px;
-    -ms-border-radius: 15px;
-    -o-border-radius: 15px;
 }
 
 
@@ -20,6 +37,6 @@
     left: 0;
     width: 100%;
     height: 100%;
-    background-color: rgba(0, 0, 0, 0.5); /* Dark overlay */
-    z-index: 1; /* Ensure overlay is above the image but below the text */
+    background-color: rgba(0, 0, 0, 0.5); 
+    z-index: 1; 
 }
