created contact us

--- a/src/app/components/home-slider/home-slider.component.html
+++ b/src/app/components/home-slider/home-slider.component.html
@@ -1,4 +1,4 @@
-<section class="d-flex justify-content-around gap-3 w-100 my-2 py-2 container overflow-hidden overflow-x-scroll">
+<section class="d-flex justify-content-around g-3 w-100 my-2 py-2 overflow-y-hidden overflow-x-scroll">
   <div class="col-3 col-lg-4 col-md-6 p-2">
     <a href="#" class="card text-decoration-none position-relative rounded rounded-4" style="height: 250px; background-image: url('https://jubari.net/media/892/ishan-seefromthesky-66Tu10CxYY0-unsplash.jpg'); background-repeat: no-repeat; background-position: center center; background-size: cover;">
       <div class="overlay rounded rounded-4"></div> 
