--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,3 +1,5 @@
-<app-nav></app-nav>
-<router-outlet />
-<app-footer></app-footer>
+<main class="bg-body-secondary">
+  <app-nav></app-nav>
+  <router-outlet />
+  <app-footer></app-footer>
+</main>
