--- a/src/app/components/item/item.component.css
+++ b/src/app/components/item/item.component.css
@@ -12,7 +12,7 @@
 
 .card-img-top {
     width: 100%;
-    height: auto;
+    height: 200px;
     transition: transform 0.5s ease;
     -webkit-transition: transform 0.5s ease;
     -moz-transition: transform 0.5s ease;
