--- a/src/app/components/item/item.component.html
+++ b/src/app/components/item/item.component.html
@@ -1,4 +1,4 @@
-<a [href]="link" class="card text-decoration-none position-relative rounded rounded-4">
+<div class="card position-relative rounded rounded-4">
   <img [src]="imageUrl" class="card-img-top rounded rounded-4" />
 
   <div class="overlay rounded rounded-4"></div>
@@ -6,4 +6,4 @@
   <div class="card-body text-center position-absolute top-50 start-50 translate-middle text-white">
     <h4 class="card-title">{{ title }}</h4>
   </div>
-</a>
+</div>
