--- a/src/app/pages/about/about.component.css
+++ b/src/app/pages/about/about.component.css
@@ -1,3 +1,30 @@
-.row .p-3 div{
-    background-color: #2e2766ec;
+.row .p-3 div {
+  border: 1px solid transparent;
+  background-color: var(--dark-blue);
+  transition: 0.3s linear;
+  -webkit-transition: 0.3s linear;
+  -moz-transition: 0.3s linear;
+  -ms-transition: 0.3s linear;
+  -o-transition: 0.3s linear;
+}
+
+.row .p-3 div p,.row .p-3 div i {
+  color: white;
+}
+
+.row .p-3 div:hover {
+  background-color: transparent;
+  border-color: var(--dark-blue);
+}
+.row .p-3 div:hover p,.row .p-3 div:hover i {
+  color: var(--dark-blue);
+}
+
+ul li{
+  list-style: none;
+}
+
+ul li::before{
+  content: '-';
+  font-weight: 900;
 }
