--- a/src/app/pages/about/about.component.html
+++ b/src/app/pages/about/about.component.html
@@ -1,10 +1,10 @@
-<main class="container">
+<main class="container w-100">
     <section class="row">
-        <div class="col-xl-6 p-5">
-                <img style="background-color:#3fbaf1;" src="https://jubari.net/media/602/logo-color.svg" width="400" height="200" class="d-inline-block align-top p-4 rounded rounded-4" alt="">
-        </div>
-        <div class="gap-5 col-xl-6">
-            <h2 class=" fs-1 my-3 text-secondary">
+        <a routerLink="" class="col-xl-6 col-md-12 p-5 d-flex flex-column justify-content-center">
+                <img style="background-color:var(--light-blue);" src="https://jubari.net/media/602/logo-color.svg" width="100%" height="200" class="d-inline-block align-top p-4 rounded rounded-4">
+        </a>
+        <article class="gap-5 col-xl-6 col-md-12">
+            <h2 class=" fs-1 my-3" style="color:var(--dark-blue)">
                 عن جباري
             </h2>
             <p class="fw-bold fs-5">
@@ -17,41 +17,46 @@
                 تتركز خدماتنا في:
             </p>
             <ul class="fs-5">
-                <li>حجز تذاكر السفر.
+                <li>
+                    حجز تذاكر السفر.
                 </li>
-                <li>الحجز الفندقي.
+                <li>
+                    الحجز الفندقي.
                 </li>
-                <li>تأجير السيارات/النقل البري.
+                <li>
+                    تأجير السيارات/النقل البري.
                 </li>
-                <li>التأمين على السفر حال الطلب.
+                <li>
+                    التأمين على السفر حال الطلب.
                 </li>
-                <li>تقديم وإصدار تأشيرات السفر المختلفة حول العالم (تأشيرات شنغن، تأشيرات عبور/...)
+                <li>
+                    تقديم وإصدار تأشيرات السفر المختلفة حول العالم (تأشيرات شنغن، تأشيرات عبور/...)
                 </li>
             </ul>
-        </div>
+        </article>
     </section>
     
     <section class="row">
-        <div class="p-3 col-xl-4 col-md-6 col-sm-12">
+        <article class="p-3 col-xl-4 col-md-6 col-sm-12">
             <div class="rounded-4 p-4 gap-5">
-                <i class="fa-solid fa-glasses text-light fs-1"></i>
-                <h2 class="text-primary">رؤيتنا</h2>
-                <p class="text-white">أن نُصبح في جُباري للسياحة والسفر روّاد المجال في الشرق الأوسط وأفريقيا، عبر تقديم خدمات ذات جودة وتكلفة وتنوع مناسب لجميع الأفراد، لنصبح الخيار الأول والأمثل.</p>
+                <i class="fa-solid fa-glasses fs-1"></i>
+                <h2 class="text-info">رؤيتنا</h2>
+                <p class="">أن نُصبح في جُباري للسياحة والسفر روّاد المجال في الشرق الأوسط وأفريقيا، عبر تقديم خدمات ذات جودة وتكلفة وتنوع مناسب لجميع الأفراد، لنصبح الخيار الأول والأمثل.</p>
             </div>
-        </div>
-        <div class="p-3 col-xl-4 col-md-6 col-sm-12">
+        </article>
+        <article class="p-3 col-xl-4 col-md-6 col-sm-12">
             <div class="rounded-4 p-4 gap-5">
-                <i class="fa-solid fa-truck-fast text-light fs-1"></i>
-                <h2 class="text-primary">مهمتنا</h2>
-                <p class="text-white">أن نُصبح في جُباري للسياحة والسفر روّاد المجال في الشرق الأوسط وأفريقيا، عبر تقديم خدمات ذات جودة وتكلفة وتنوع مناسب لجميع الأفراد، لنصبح الخيار الأول والأمثل.</p>
+                <i class="fa-solid fa-truck-fast fs-1"></i>
+                <h2 class="text-info">مهمتنا</h2>
+                <p class="">أن نُصبح في جُباري للسياحة والسفر روّاد المجال في الشرق الأوسط وأفريقيا، عبر تقديم خدمات ذات جودة وتكلفة وتنوع مناسب لجميع الأفراد، لنصبح الخيار الأول والأمثل.</p>
             </div>
-        </div>
-        <div class="p-3 col-xl-4 col-md-6 col-sm-12">
+        </article>
+        <article class="p-3 col-xl-4 col-md-6 col-sm-12">
             <div class="rounded-4 p-4 gap-5">
-                <i class="fa-solid fa-sun text-light fs-1"></i>
-                <h2 class="text-primary">قيمنا</h2>
-                <p class="text-white">أن نُصبح في جُباري للسياحة والسفر روّاد المجال في الشرق الأوسط وأفريقيا، عبر تقديم خدمات ذات جودة وتكلفة وتنوع مناسب لجميع الأفراد، لنصبح الخيار الأول والأمثل.</p>
+                <i class="fa-solid fa-sun fs-1"></i>
+                <h2 class="text-info">قيمنا</h2>
+                <p class="">أن نُصبح في جُباري للسياحة والسفر روّاد المجال في الشرق الأوسط وأفريقيا، عبر تقديم خدمات ذات جودة وتكلفة وتنوع مناسب لجميع الأفراد، لنصبح الخيار الأول والأمثل.</p>
             </div>
-        </div>
+        </article>
     </section>
 </main>
