--- a/src/app/pages/home/home.component.css
+++ b/src/app/pages/home/home.component.css
@@ -3,3 +3,13 @@ section {
   flex-direction: column;
   align-items: center;
 }
+
+.accordion-button {
+    display: flex;
+    justify-content: space-between;  
+    align-items: center;  
+    padding: 0.75rem 1.25rem;  
+}
+.accordion-text {
+    flex-grow: 1;  
+}
