--- a/src/styles.css
+++ b/src/styles.css
@@ -1,6 +1,11 @@
 @import 'bootstrap/dist/css/bootstrap.min.css';
 @import '@fortawesome/fontawesome-free/css/all.min.css';
 
+:root {
+  --dark-blue: #2e2766;
+  --light-blue: rgb(108, 222, 255);
+}
+
 ::-webkit-scrollbar {
     width: 10px;
   }
@@ -16,14 +21,19 @@
 ::-webkit-scrollbar-thumb {
     background: #0fd9e89f;
     border-radius: 15px;
+    cursor: grab;
   }
+
+::-webkit-scrollbar-thumb:active{
+  cursor: grabbing;
+}
   
 ::-webkit-scrollbar-thumb:hover {
     background: #34d4e0;
   }
 
 .drop-filter{
-    backdrop-filter: blur(3px);
+    backdrop-filter: blur(5px);
     padding: 10px;
     font-weight: 100;
     font-size: 20px;
@@ -37,6 +47,44 @@
     left: 0;
     width: 100%;
     height: 100%;
-    background-color: rgba(0, 0, 0, 0.5); 
+    background-color: rgba(0, 0, 0, 0.4); 
     z-index: 1; 
+}
+
+a{
+  cursor: pointer;
+  text-decoration: none;
+}
+
+.card {
+  position: relative;
+  overflow: hidden;
+}
+.card:hover img{
+  transform: scale(1.2);
+  -webkit-transform: scale(1.2);
+  -moz-transform: scale(1.2);
+  -ms-transform: scale(1.2);
+  -o-transform: scale(1.2);
+}
+
+img {
+  width: 100%;
+  height: 200px;
+  transition: transform 0.5s ease;
+  -webkit-transition: transform 0.5s ease;
+  -moz-transition: transform 0.5s ease;
+  -ms-transition: transform 0.5s ease;
+  -o-transition: transform 0.5s ease;
+}
+.card-title {
+  margin: 0;
+}
+
+.card-body {
+  z-index: 2; 
+  display: flex; 
+  flex-direction: row; 
+  justify-content: center; 
+  align-items: center; 
 }
